[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cashflow-13week"
version = "0.1.0"
description = "13-week cashflow forecaster (real-world SME finance workflow)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "typer>=0.9",
  "rich>=13.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.0",
  "python-dateutil>=2.9",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cashflow = "cashflow_13week.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]